# scop

./: .gitignore  CMakeLists.txt
Libs/libft/Includes/: list.h
Libs/libft/Srcs/: free_2darr.c  ft_atoi.c  t_list_push_front.c
include/: scop.h  scop_defines.h  scop_typedefs.h
src/: main.c  read_f.c  read_obj.c  read_v.c
